--- a/css/hero-section.css
+++ b/css/hero-section.css
@@ -11,7 +11,7 @@
     height: 100vh;
     width: 100vw;
 
-    background-image: url("/Materiale/topbillede.jpg");
+    background-image: url("../Materiale/topbillede.jpg");
     background-repeat: no-repeat;
     background-position: center; 
     background-size: cover;
