--- a/css/splitcontent-section2.css
+++ b/css/splitcontent-section2.css
@@ -18,7 +18,7 @@
     height: 70%;
     width: 100%;
 
-    background-image: url("/Materiale/splitsektion-2.jpg");
+    background-image: url("../Materiale/splitsektion-2.jpg");
     background-repeat: no-repeat;
     background-position: center; 
     background-size: cover;
@@ -53,7 +53,7 @@
     .splitContent2 {
         padding: 0 2em;
 
-        background-image: url("/Materiale/splitsektion-2.jpg");
+        background-image: url("../Materiale/splitsektion-2.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
