Add additional url changes on imgs

--- a/css/menu.css
+++ b/css/menu.css
@@ -37,7 +37,7 @@
     height: 100%;
     width: calc(100% / 3);
 
-    background-image: url("/Materiale/service.jpg");
+    background-image: url("../Materiale/service.jpg");
     background-repeat: no-repeat;
     background-position: center; 
     background-size: cover;
@@ -54,7 +54,7 @@
     height: 100%;
     width: calc(100% / 3);
 
-    background-image: url("/Materiale/kontaktos.jpg");
+    background-image: url("../Materiale/kontaktos.jpg");
     background-repeat: no-repeat;
     background-position: center; 
     background-size: cover;
