--- a/css/splitcontent-section2.css
+++ b/css/splitcontent-section2.css
@@ -31,6 +31,7 @@
 .splitContent2__title {
     font-size: 3em;
     color: var(--main-color-black);
+    font-family: "DM Serif Display", serif;
 }
 
 .splitContent2__text {
@@ -73,6 +74,12 @@
     }
 
     .button_contacting {
+        border-style: none;
+        text-transform: uppercase;
+    
+        border-radius: .5em;
+        padding: .5em 1.5em;
+        
         background-color: var(--main-color-white);
         color: var(--main-color-black);
     }
