--- a/css/footer.css
+++ b/css/footer.css
@@ -42,6 +42,7 @@ footer {
 .footer__links_title {
     display: block;
     font-size: 2em;
+    font-family: "DM Serif Display", serif;
 }
 
 .footer__list a {
