--- a/css/menu.css
+++ b/css/menu.css
@@ -26,6 +26,7 @@
     background-size: cover;
 
     color: var(--main-color-white);
+    font-family: "DM Serif Display", serif;
 }
 
 .img-2 {
@@ -43,6 +44,7 @@
     background-size: cover;
 
     color: var(--main-color-white);
+    font-family: "DM Serif Display", serif;
 }
 
 .img-3 {
@@ -60,6 +62,7 @@
     background-size: cover;
 
     color: var(--main-color-white);
+    font-family: "DM Serif Display", serif;
 }
 
 /* SCREEN ================================================== */
